--- a/.github/workflows/github.actions-demo.yml
+++ b/.github/workflows/github.actions-demo.yml
@@ -8,5 +8,5 @@ jobs:
       - run: ls -la # permet de voir sur le fit ne récupère pas les fichiers du repo
       - run: pip install streamlit
       - run: pip install jinja2
-      - run: pip install cypress
+      - run: npm install cypress
       - run: streamlit test_modelprix.py
