mise à jour de la pipeline

--- a/.github/workflows/github.actions-demo.yml
+++ b/.github/workflows/github.actions-demo.yml
@@ -9,4 +9,4 @@ jobs:
       - run: pip install streamlit
       - run: pip install jinja2
       - run: npm install cypress
-      - run: streamlit test_modelprix.py
+      - run: streamlit run test_modelprix.py &
