--- a/.github/workflows/github.actions-demo.yml
+++ b/.github/workflows/github.actions-demo.yml
@@ -8,5 +8,7 @@ jobs:
       - run: ls -la # permet de voir sur le fit ne récupère pas les fichiers du repo
       - run: pip install streamlit
       - run: pip install -U Jinja2
+      - run: pip install pytest
       - run: npm install cypress
-      - run: streamlit run test_modelprix.py &
+      - run: pytest run test_modelprix.py &
+      - run: streamlit run model_dashboard.py &
