--- a/.github/workflows/github.actions-demo.yml
+++ b/.github/workflows/github.actions-demo.yml
@@ -10,6 +10,7 @@ jobs:
       - run: pip install -U Jinja2
       - run: pip install pytest
       - run: pip install joblib
+      - run: pip install sklearn
       - run: npm install cypress
-      - run: pytest test_modelprix.py &
+      - run: pytest test_modelprix.py
       - run: streamlit run model_dashboard.py &
