--- a/.github/workflows/github.actions-demo.yml
+++ b/.github/workflows/github.actions-demo.yml
@@ -6,7 +6,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: ls -la # permet de voir sur le fit ne récupère pas les fichiers du repo
-      #installation des librairies
+      #installation des librairies.
       - run: pip install streamlit
       - run: pip install -U Jinja2
       - run: pip install pytest
