--- a/.github/workflows/github.actions-demo.yml
+++ b/.github/workflows/github.actions-demo.yml
@@ -6,12 +6,19 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: ls -la # permet de voir sur le fit ne récupère pas les fichiers du repo
-      #installation des librairies.
+
+      #installation des librairies
       - run: pip install streamlit
       - run: pip install -U Jinja2
       - run: pip install pytest
       - run: pip install joblib
       - run: pip install sklearn
       - run: npm install cypress
+
+      #lancement des tests unitaires
       - run: pytest test_modelprix.py
+
+      #lancement test fondamental
       - run: streamlit run model_dashboard.py &
+      - name: Cypress run
+        uses: cypress-io/github-actions@v4
